# mlopt-final

./: .gitignore  README.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.md  TODO.md  bid_optimization.ipynb  combined_kw_ads_data2.csv  helpers.py  iai_test.ipynb  my_model_debug.lp  new_keywords_gkp.csv  prediction_modeling.ipynb  pyproject.toml  submit_mlopt_job.sh  tidy_get_data.ipynb  tidy_get_data_tfidf.ipynb  train_model.ipynb  unique_keywords.csv
.ipynb_checkpoints/: bid_optimization-checkpoint.ipynb  iai_test-checkpoint.ipynb  prediction_modeling-checkpoint.ipynb  tidy_get_data-checkpoint.ipynb  tidy_get_data_tfidf-checkpoint.ipynb
clean_data/: ad_opt_data_tfidf_new_keywords.csv  new_keyword_embeddings_tfidf.csv  unique_keyword_embeddings_bert.csv  unique_keyword_embeddings_tfidf.csv
logs/: mlopt_model_6806952.err  mlopt_model_6806952.out  mlopt_model_6808789.err  mlopt_model_6808789.out  mlopt_model_6809677.err  mlopt_model_6809677.out
mlopt_final.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model_formulations/: bid_optimization_lr_lr_20251212_110855.lp
models/: lr_bert_clicks.json  lr_bert_conversion.json  lr_clicks.json  lr_conversion.json  lr_tfidf_clicks.json  lr_tfidf_conversion.json  oct_bert_conversion.json  oct_conversion.json  ort_tfidf_conversion.json  rf_bert_clicks.json  rf_bert_conversion.json  rf_tfidf_conversion.json  weights_bert_clicks_categorical.csv  weights_bert_clicks_constant.csv  weights_bert_clicks_numeric.csv  weights_bert_conversion_categorical.csv  weights_bert_conversion_constant.csv  weights_bert_conversion_numeric.csv  weights_tfidf_clicks_categorical.csv  weights_tfidf_clicks_constant.csv  weights_tfidf_clicks_numeric.csv  weights_tfidf_conversion_constant.csv  weights_tfidf_conversion_numeric.csv  (+6 more)
(+44 files in other folders)
